--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b31b914",
+   "id": "ec9667da",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,33 +14,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "591c96b6",
+   "id": "341d4a48",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to set up the environment for Google Colab.\n"
+    "Run the cells below to install the dependencies and set up the API key.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e03a646",
+   "id": "79ecb0d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer>=0.1.6"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa2627e",
+   "id": "60175007",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up NVIDIA API key from Colab secrets\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7142c668",
+   "id": "58c7a23c",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -61,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d314046",
+   "id": "6b51048b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2c91a1",
+   "id": "7743442a",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -95,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b97c7d",
+   "id": "47a2143c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "385067da",
+   "id": "23faa8ee",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -121,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808602fc",
+   "id": "3a31a803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7779673f",
+   "id": "5dd6cc4b",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -168,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a16bb2c",
+   "id": "2f6daf5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cbe947",
+   "id": "ca28bf79",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -194,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "899ad203",
+   "id": "dc2970b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b95c6952",
+   "id": "dbe2ba06",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -212,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c4ea55f",
+   "id": "b78ee838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39bae663",
+   "id": "4aa0d91e",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -302,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0152a21c",
+   "id": "5297ff97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f2b181",
+   "id": "39b0ab09",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -354,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd2ef4ee",
+   "id": "b92eea36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c8cf4b4",
+   "id": "ae82081b",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60083d1b",
+   "id": "61ad8562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5174e3",
+   "id": "91d30f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a608cf38",
+   "id": "86090f7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac022c04",
+   "id": "bdc88621",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a09834",
+   "id": "ef1f2426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82515637",
+   "id": "4e91097e",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cffa3d1a",
+   "id": "44192aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4695344e",
+   "id": "6725271d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c9cc607",
+   "id": "491d20af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e83dac04",
+   "id": "70f9c440",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
