--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "180d64a4",
+   "id": "fb66d4f6",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,33 +16,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33dc31a2",
+   "id": "720d6b46",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to set up the environment for Google Colab.\n"
+    "Run the cells below to install the dependencies and set up the API key.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b223f0e",
+   "id": "4c24567c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer>=0.1.6"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2ab316",
+   "id": "3f02f461",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up NVIDIA API key from Colab secrets\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f061323",
+   "id": "4f9d5b8e",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4be8e0f",
+   "id": "f8d7c320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89575d7",
+   "id": "17689e82",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -91,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "236a2916",
+   "id": "54947242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df6e463",
+   "id": "48bb816e",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -117,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53d41281",
+   "id": "9158afff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd3f03e",
+   "id": "caa847b8",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -164,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bca047c",
+   "id": "e9fbbb41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "875c849c",
+   "id": "840a96be",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -198,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4383058a",
+   "id": "2b08702a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b460ba",
+   "id": "cf3075dc",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -233,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55054448",
+   "id": "72ef6998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fc0954",
+   "id": "38837ef0",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -340,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafe69da",
+   "id": "849987f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78a93876",
+   "id": "b993fdea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1004f0e5",
+   "id": "6d9fbf4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e712bc10",
+   "id": "9ad17ac1",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -384,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f28cf03",
+   "id": "92487456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4511bf3",
+   "id": "e3219bb8",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -407,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1ea546",
+   "id": "488e15bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec54d5b7",
+   "id": "4bc23ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0bfcb9b",
+   "id": "48ca6bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebfcbec",
+   "id": "8bfff6c5",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
