--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16835351",
+   "id": "70f9bdbf",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a4f774",
+   "id": "17bf15ef",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,33 +25,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9d836f",
+   "id": "47b661ec",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to set up the environment for Google Colab.\n"
+    "Run the cells below to install the dependencies and set up the API key.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "611577bd",
+   "id": "caac58a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer pillow"
+    "!pip install -q data-designer>=0.1.6 pillow>=12.0.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9cd95f",
+   "id": "af9bb850",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up NVIDIA API key from Colab secrets\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed0cc0d",
+   "id": "52062953",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -72,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d08fd71",
+   "id": "5406d2f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a210d017",
+   "id": "18d9e8a8",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -116,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3eb41f3",
+   "id": "f7ea1cfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a279c56",
+   "id": "498dbf37",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -142,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c93ec09",
+   "id": "d02da766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2b4500",
+   "id": "652e35c4",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -180,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7dc93d8",
+   "id": "9105d13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a914dc3",
+   "id": "2f2e0c3f",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -206,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dacf9004",
+   "id": "0868eefd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e602b972",
+   "id": "017fd352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad701fd",
+   "id": "82c3e194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ade03b",
+   "id": "6ccb2131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd4c526",
+   "id": "2bee55a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd54792",
+   "id": "38535fad",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -340,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69967b8d",
+   "id": "1dfeef0f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -348,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "827d7a34",
+   "id": "540c1560",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -365,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b9d461",
+   "id": "c203e707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f56d6c41",
+   "id": "477a82bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d828b41d",
+   "id": "4add7bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60bf5e50",
+   "id": "2add3b7e",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -409,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea6e43d",
+   "id": "f9420b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83fa6b55",
+   "id": "2561626c",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -430,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa6945d",
+   "id": "da172f7a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96257f6d",
+   "id": "d55e0dcf",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -467,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4308cc9",
+   "id": "3ebc2769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0747c1",
+   "id": "cc034afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cfe8cad",
+   "id": "b769554e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab3bedd",
+   "id": "9d19e830",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
