--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61350549",
+   "id": "3f53bedb",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,33 +16,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdda092",
+   "id": "4086037e",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to set up the environment for Google Colab.\n"
+    "Run the cells below to install the dependencies and set up the API key.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef62a444",
+   "id": "b2afd1f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer>=0.1.6"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3af1cf7",
+   "id": "07e57a6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up NVIDIA API key from Colab secrets\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989c24bc",
+   "id": "138c072c",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d360a00a",
+   "id": "77acc96a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77231827",
+   "id": "d4269003",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a595ceb",
+   "id": "d622824f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a719760f",
+   "id": "ee7e7e22",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c008cb",
+   "id": "fcf88403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21ae4eb",
+   "id": "9f4a36da",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f59b3c3",
+   "id": "c55b0aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ce6ffe",
+   "id": "6197bced",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -206,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4a9df9",
+   "id": "501026dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f95e86",
+   "id": "e07235d6",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -243,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eef341c",
+   "id": "643fca70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca232974",
+   "id": "65af2821",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -369,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc41ccd4",
+   "id": "a8669e16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc86025",
+   "id": "955833fc",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1210f637",
+   "id": "602ed286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1bec249",
+   "id": "c3e6f74e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a00c2f22",
+   "id": "53f7bcb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26f2b05",
+   "id": "fddf7bad",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0c16c2",
+   "id": "391f45b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6029cce2",
+   "id": "f7dae0a0",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede95f7d",
+   "id": "9b0677ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db0b85e1",
+   "id": "1945840f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676da66a",
+   "id": "b3c85e29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879ce764",
+   "id": "26a2f7cf",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
